--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   bloc: ^6.1.0
   cupertino_icons: ^1.0.0
+  flutter_bloc: ^6.0.6
 
 dev_dependencies:
   flutter_test:
